Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <p>Pulse animation for Android.</p>
 
-<p><img src="https://raw.githubusercontent.com/booncol/Pulsator4Droid/master/demo.gif" alt="Demo"></p>
+<p><img src="https://raw.githubusercontent.com/booncol/Pulsator4Droid/master/demo.gif" alt=""></p>
 
 <h2>
 <a id="maven" class="anchor" href="#maven" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Maven</h2>
@@ -91,6 +91,8 @@ pulsator<span class="pl-k">.</span>start();</pre></div>
 <a id="author" class="anchor" href="#author" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Author</h2>
 
 <p><strong>Lukasz Majda</strong></p>
+
+<p>Inspired by <a href="https://github.com/shu223/Pulsator">iOS Pulsator library</a> by <strong>Shuichi Tsutsumi</strong></p>
 
 <h2>
 <a id="license" class="anchor" href="#license" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>License</h2>
